# http-process-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py  service.py  stream.py
tests/: test_main.py
