[tool.poetry]
name = "http-process-wrapper"
version = "0.1.0"
description = "A simple FastAPI project"
authors = ["Nour Selim <nourselim0@outlook.com>"]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["standard"], version = "^0.119.0" }
uvicorn = "^0.29.0"
anyio = "^4.11.0"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "redefined-outer-name",
]
